[package]
name = "rust-server"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-rt = "1.0.0"
actix-web = "2.0.0"
serde_json = { version = "1.0", default-features = false, features = ["alloc"] }
futures = "0.3.5"
serde = "1"
dotenv = "0.15.0"
config = "0.10.1"
chrono = "0.4"
mysql = "*"
azure_sdk_cosmos = "0.100.3"
tokio = { version = "1", features = ["macros"] }




#cloud-pubsub = "0.6.0"
#serde_derive="1.0.130"
#envy="0.4"